update all files

--- a/cyanide-free-white-bronze.html
+++ b/cyanide-free-white-bronze.html
@@ -269,8 +269,8 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="Pretreatment.html">Pretreatment</a></li>
-            <li><a href="PlatingCoating.html">Plating</a></li>
+            <li><a href="pretreatment.html">Pretreatment</a></li>
+            <li><a href="platingcoating.html">Plating</a></li>
             <li><a href="blackening.html">Blackening</a></li>
             <li><a href="passivation.html">Passivation</a></li>
             <li><a href="polishing.html">Polishing</a></li>
