--- a/platingcoating.html
+++ b/platingcoating.html
@@ -8,7 +8,7 @@
   <!-- === SEO === -->
   <meta name="description" content="น้ำยาชุบและเคลือบผิวโลหะสำหรับงานอุตสาหกรรม: ซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมคำปรึกษาและโซลูชันตามไลน์ผลิต">
   <meta name="robots" content="index,follow">
-  <link rel="canonical" href="PlatingCoating.html">
+  <link rel="canonical" href="https://www.baumechemical.com/platingcoating.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) - Baume Chemical">
   <meta property="og:description" content="โซลูชันชุบและเคลือบผิวโลหะครบ: Zinc, Nickel, Copper, Brass, Electrolytic Lacquer, Cyanide-Free White Bronze">
-  <meta property="og:url" content="https://www.baumechemical.com/platingcoating">
+  <meta property="og:url" content="https://www.baumechemical.com/platingcoating.html">
   <meta property="og:image" content="https://i.imgur.com/Vwpuq95.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -183,7 +183,7 @@
           <p data-i18n-key="zinc_desc">
             สร้างชั้นป้องกันสนิม เงางาม เกาะตัวไว เหมาะกับงานหลุมตื้น โครเมตมีหลายสีและทนสภาพแวดล้อม ใช้แพร่หลายในยานยนต์เพื่อคุ้มค่าและปกป้องชิ้นส่วนหลัก
           </p>
-          <a class="more" href="Zincplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="zincplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -276,8 +276,8 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="Pretreatment.html">Pretreatment</a></li>
-            <li><a href="PlatingCoating.html">Plating</a></li>
+            <li><a href="pretreatment.html">Pretreatment</a></li>
+            <li><a href="platingcoating.html">Plating</a></li>
             <li><a href="blackening.html">Blackening</a></li>
             <li><a href="passivation.html">Passivation</a></li>
             <li><a href="polishing.html">Polishing</a></li>
