--- a/pretreatment.html
+++ b/pretreatment.html
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Acid Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="acid_title">กรดล้างไขมัน (Acid Degreaser)</h3>
             <p data-i18n-key="acid_desc">น้ำยาเคมีสำหรับล้างคราบไขมัน พร้อมทั้งกัดสนิม บนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ใช้ล้างบนอลูมิเนียม เหล็ก ทองแดง ทองเหลืองและโลหะต่างๆ</p>
-            <a class="more" href="Acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -286,8 +286,8 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="Pretreatment.html">Pretreatment</a></li>
-            <li><a href="PlatingCoating.html">Plating</a></li>
+            <li><a href="pretreatment.html">Pretreatment</a></li>
+            <li><a href="platingcoating.html">Plating</a></li>
             <li><a href="blackening.html">Blackening</a></li>
             <li><a href="passivation.html">Passivation</a></li>
             <li><a href="polishing.html">Polishing</a></li>
