update all files

--- a/contact-us.html
+++ b/contact-us.html
@@ -8,9 +8,9 @@
 <title id="metaTitle">ติดต่อเรา | Baume Chemical</title>
 <meta name="description" id="metaDesc" content="ติดต่อ Baume Chemical เพื่อให้ทีมงานติดต่อกลับผ่านอีเมล กรอกอีเมลแล้วส่งได้ทันที พร้อมข้อมูลติดต่ออื่นๆ และแผนที่บริษัท">
 <meta name="robots" content="index, follow, max-image-preview:large">
-<link rel="canonical" href="https://www.baumechemical.com/contact-us">
-<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/contact-us">
-<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/contact-us">
+<link rel="canonical" href="https://www.baumechemical.com/contact-us.html">
+<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/contact-us.html">
+<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/contact-us.html">
 <meta name="theme-color" content="#2c5e4e">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 
@@ -20,7 +20,7 @@
 <meta property="og:locale" id="ogLocale" content="th_TH">
 <meta property="og:title" id="ogTitle" content="ติดต่อเรา | Baume Chemical">
 <meta property="og:description" id="ogDesc" content="กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท">
-<meta property="og:url" content="https://www.baumechemical.com/contact-us">
+<meta property="og:url" content="https://www.baumechemical.com/contact-us.html">
 <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -76,17 +76,17 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/contact-us#breadcrumb",
+      "@id": "https://www.baumechemical.com/contact-us.html#breadcrumb",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
-        { "@type": "ListItem", "position": 2, "name": "ติดต่อเรา", "item": "https://www.baumechemical.com/contact-us" }
+        { "@type": "ListItem", "position": 2, "name": "ติดต่อเรา", "item": "https://www.baumechemical.com/contact-us.html" }
       ]
     },
     {
       "@type": "ContactPage",
       "@id": "https://www.baumechemical.com/contact-us#page",
       "name": "ติดต่อเรา | Baume Chemical",
-      "url": "https://www.baumechemical.com/contact-us",
+      "url": "https://www.baumechemical.com/contact-us.html",
       "about": { "@id": "https://www.baumechemical.com/#org" },
       "breadcrumb": { "@id": "https://www.baumechemical.com/contact-us#breadcrumb" },
       "primaryImageOfPage": {
