--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="badges"><span class="badge">Pretreatment</span><span class="badge">Cleaning</span></div>
           <h3 data-i18n-key="card_pret_title">เคมีล้างผิวงาน</h3>
           <p data-i18n-key="card_pret_desc">ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิคช่วยกำจัดคราบน้ำมัน/สนิม เตรียมผิวพร้อมชุบ ลดของเสียในไลน์</p>
-          <a class="more" href="Pretreatment.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="pretreatment.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Plating -->
@@ -393,7 +393,7 @@
           <div class="badges"><span class="badge">Plating</span><span class="badge">Zinc/Nickel/Copper/Brass</span></div>
           <h3 data-i18n-key="card_plating_title">น้ำยาชุบโลหะ</h3>
           <p data-i18n-key="card_plating_desc">เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</p>
-          <a class="more" href="PlatingCoating.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="platingcoating.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Blackening -->
