--- a/products.html
+++ b/products.html
@@ -81,8 +81,8 @@
     "itemListOrder":"http://schema.org/ItemListOrderAscending",
     "numberOfItems": 9,
     "itemListElement": [
-      {"@type":"ListItem","position":1,"name":"Pretreatment","url":"https://www.baumechemical.com/Pretreatment.html"},
-      {"@type":"ListItem","position":2,"name":"Plating","url":"https://www.baumechemical.com/PlatingCoating.html"},
+      {"@type":"ListItem","position":1,"name":"Pretreatment","url":"https://www.baumechemical.com/pretreatment.html"},
+      {"@type":"ListItem","position":2,"name":"Plating","url":"https://www.baumechemical.com/platingcoating.html"},
       {"@type":"ListItem","position":3,"name":"Blackening","url":"https://www.baumechemical.com/blackening.html"},
       {"@type":"ListItem","position":4,"name":"Passivation","url":"https://www.baumechemical.com/passivation.html"},
       {"@type":"ListItem","position":5,"name":"Polishing","url":"https://www.baumechemical.com/polishing.html"},
@@ -419,7 +419,7 @@ const PRODUCTS = [
     tags:{ th:["pretreatment","cleaning","degreaser","ล้างไขมัน","ultrasonic","acid","alkaline"],
            en:["pretreatment","cleaning","degreaser","ultrasonic","acid","alkaline"] },
     img:"https://i.imgur.com/QfsLZ0I.jpeg",
-    href:"Pretreatment.html",
+    href:"pretreatment.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
     tds:"https://www.baumechemical.com/docs/tds/pretreatment-cleaning.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
@@ -432,7 +432,7 @@ const PRODUCTS = [
     tags:{ th:["plating","zinc","nickel","copper","brass","white bronze","ชุบโลหะ"],
            en:["plating","zinc","nickel","copper","brass","white bronze"] },
     img:"https://i.imgur.com/DzCh11Q.jpeg",
-    href:"PlatingCoating.html",
+    href:"platingcoating.html",
     mail:"mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
     tds:"https://www.baumechemical.com/docs/tds/metal-plating.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
