--- a/about-us.html
+++ b/about-us.html
@@ -9,9 +9,9 @@
 <meta name="description" content="บริษัท โบเม่ เคมิเคิล จำกัด ผู้นำเข้าและจัดหาเคมีภัณฑ์งานชุบเคลือบผิวโลหะคุณภาพสูง มากกว่า 30 ปี พร้อมบริการวิเคราะห์และที่ปรึกษาหน้างาน" data-i18n-attr="content:meta_desc">
 
 <!-- Canonical & Hreflang -->
-<link rel="canonical" href="https://www.baumechemical.com/about-us">
-<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/about-us">
-<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/about-us">
+<link rel="canonical" href="https://www.baumechemical.com/about-us.html">
+<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/about-us.html">
+<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/about-us.html">
 
 <!-- Robots & Theme -->
 <meta name="robots" content="index, follow, max-image-preview:large">
@@ -23,7 +23,7 @@
 <meta property="og:locale" content="th_TH" id="ogLocale">
 <meta property="og:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:og_title" id="ogTitle">
 <meta property="og:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 30 ปี" data-i18n-attr="content:og_desc" id="ogDesc">
-<meta property="og:url" content="https://www.baumechemical.com/about-us">
+<meta property="og:url" content="https://www.baumechemical.com/about-us.html">
 <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -80,7 +80,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/about-us#breadcrumb",
+      "@id": "https://www.baumechemical.com/about-us.html#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -92,14 +92,14 @@
           "@type": "ListItem",
           "position": 2,
           "name": "เกี่ยวกับเรา",
-          "item": "https://www.baumechemical.com/about-us"
+          "item": "https://www.baumechemical.com/about-us.html"
         }
       ]
     },
     {
       "@type": "AboutPage",
-      "@id": "https://www.baumechemical.com/about-us#about",
-      "url": "https://www.baumechemical.com/about-us",
+      "@id": "https://www.baumechemical.com/about-us.html#about",
+      "url": "https://www.baumechemical.com/about-us.html",
       "name": "เกี่ยวกับเรา | Baume Chemical",
       "isPartOf": {
         "@type": "WebSite",
@@ -114,7 +114,7 @@
         "height": 630
       },
       "publisher": { "@id": "https://www.baumechemical.com/#org" },
-      "breadcrumb": { "@id": "https://www.baumechemical.com/about-us#breadcrumb" },
+      "breadcrumb": { "@id": "https://www.baumechemical.com/about-us.html#breadcrumb" },
       "inLanguage": "th"
     }
   ]
